<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_representatives">Find My Representatives</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>

    <string name="location_required">Location permission is required to use this feature!</string>
    <string name="location_error">Error finding the current location</string>
    <string name="gps_required">Gps is required to use this feature, please enable it and try again!</string>

    <string name="ok">OK</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="go_to_the_information_page">Go to the information page</string>
    <string name="go_to_the_facebook_profile">Go to the facebook profile</string>
    <string name="go_to_the_twitter_profile">Go to the Twitter profile</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="dummy_date">Tue Jun 02 00:00:00 EDT 2020</string>
    <string name="dummy_election_name">Wisconsin Presidential Primary Election</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="election_information">Election Information</string>

</resources>
