<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="voterInfo"
            type="com.example.android.politicalpreparedness.election.VoterInfoBindableFields" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            style="@style/AppTheme.DefaultTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{voterInfo.electionName}"
            tools:title="@string/dummy_election_name" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:text="@{voterInfo.electionDay}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="@string/dummy_date" />

        <TextView
            android:id="@+id/state_header"
            style="@style/AppTheme.DefaultTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@color/colorPrimary"
            android:text="@string/election_information"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            style="@style/AppTheme.DefaultSubTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            android:background="@drawable/border_only_button_shape"
            android:enabled="@{voterInfo.enableInfoButtons}"
            android:gravity="center"
            android:onClick="@{() -> voterInfo.onStateLocationsInfoClick()}"
            android:text="@string/voting_locations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            tools:enabled="true" />

        <TextView
            android:id="@+id/state_ballot"
            style="@style/AppTheme.DefaultSubTitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            android:background="@drawable/border_only_button_shape"
            android:enabled="@{voterInfo.enableInfoButtons}"
            android:gravity="center"
            android:onClick="@{() -> voterInfo.onBallotInfoClick()}"
            android:text="@string/ballot_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            tools:enabled="true" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            tools:text="State Header" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="Address" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:backgroundTint="@color/colorPrimary"
            android:elevation="0dp"
            android:enabled="@{voterInfo.enableInfoButtons}"
            android:fontFamily="@font/kanit"
            android:onClick="@{() -> voterInfo.onFollowUnfollowClick()}"
            android:text="@string/follow_election"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>