<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:elevation="@dimen/default_elevation">

        <ImageView
            android:id="@+id/image_representative"
            android:layout_width="@dimen/list_item_avatar_size"
            android:layout_height="@dimen/list_item_avatar_size"
            android:layout_margin="@dimen/default_margin"
            android:elevation="@dimen/default_elevation"
            android:src="@drawable/ic_profile"
            app:profileImage="@{representative.official.photoUrl}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_job_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_job_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:fontFamily="@font/kanit"
            android:textColor="@color/charcoal_gray"
            android:textSize="@dimen/list_item_text_large"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/image_representative"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="President of the United States" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:fontFamily="@font/kanit"
            android:textColor="@color/gray"
            android:textSize="@dimen/list_item_text_medium"
            android:text="@{representative.official.name}"
            app:layout_constraintEnd_toStartOf="@+id/image_www"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/text_job_title"
            app:layout_constraintTop_toBottomOf="@+id/text_job_title"
            tools:text="Name of the President" />

        <TextView
            android:id="@+id/text_party"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:fontFamily="@font/kanit"
            android:textColor="@color/gray_70"
            android:textSize="@dimen/list_item_text_small"
            android:text="@{representative.official.party}"
            app:layout_constraintEnd_toEndOf="@+id/text_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/image_representative"
            app:layout_constraintStart_toStartOf="@+id/text_name"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            tools:text="Party of the president" />

        <ImageView
            android:id="@+id/image_www"
            android:layout_width="@dimen/list_item_link_button_size"
            android:layout_height="@dimen/list_item_link_button_size"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:contentDescription="@string/go_to_the_information_page"
            android:src="@drawable/ic_www"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_fb"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_job_title" />

        <ImageView
            android:id="@+id/image_fb"
            android:layout_width="@dimen/list_item_link_button_size"
            android:layout_height="@dimen/list_item_link_button_size"
            android:layout_marginEnd="@dimen/default_margin"
            android:contentDescription="@string/go_to_the_facebook_profile"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_twiter"
            app:layout_constraintStart_toEndOf="@+id/image_www"
            app:layout_constraintTop_toBottomOf="@+id/text_job_title" />

        <ImageView
            android:id="@+id/image_twiter"
            android:layout_width="@dimen/list_item_link_button_size"
            android:layout_height="@dimen/list_item_link_button_size"
            android:layout_marginEnd="@dimen/default_margin"
            android:contentDescription="@string/go_to_the_twitter_profile"
            android:src="@drawable/ic_twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_fb"
            app:layout_constraintTop_toBottomOf="@+id/text_job_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>